--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </svg>
                 </div>
                 <div class="sidebar__user">
-                    <div class="sidebar__name">Виталий Ушаков</div>
+                    <div class="sidebar__name">Виталий Ходянков</div>
                     <div class="sidebar__text">Счастливый студент</div>
                 </div>
                 <div class="sidebar__tabs">
