--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="content__title">Домашние задания</div>
                     <ul class="content__list">
                         <li class="content__list-item">
-                            <a href="lesson1/index.html">Урок 1</a>
+                            <a href="lesson/index.html">Урок 1</a>
                         </li>
                     </ul>
                 </div>
