--- a/lesson/index.html
+++ b/lesson/index.html
@@ -15,6 +15,7 @@
         </div>
     </div>
     <div class="block2"> А здесь у меня какие-то элементы:
+        <div> 
         <span>Элемент</span>
         <span>Элемент</span>
         <span>Элемент</span>
@@ -27,6 +28,7 @@
         <span>Элемент</span>
         <span>Элемент</span>
         <span>Элемент</span>
+        </div>
     </div>
 
 </body>
