--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                         <li class="content__list-item">
                             <a href="lesson3/index.html">Урок 3</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="lesson28/index.html">Урок 28</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="content__block hidden" id="diplomBlock">
