--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                         <li class="content__list-item">
                             <a href="lesson36/index.html">Урок 36</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="lesson51/index.html">Урок 51</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="content__block hidden" id="diplomBlock">
