--- a/lesson51/index.html
+++ b/lesson51/index.html
@@ -103,7 +103,18 @@
                         <img src="" alt="">
                     </div>
                 </div>
-                <div class="product__card">
+                <div class="product__card producrt__card--activ">
+                    <div class="product__info">
+                        <span class="product__price"></span>
+                        <h4 class="product__title"></h4>
+                        <div class="product__shape"></div>
+                        <p class="product__text"></p>
+                    </div>
+                    <div class="product_img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="product__card producrt__card--activ">
                     <div class="product__info">
                         <span class="product__price"></span>
                         <h4 class="product__title"></h4>
@@ -136,7 +147,18 @@
                         <img src="" alt="">
                     </div>
                 </div>
-                <div class="product__card">
+                <div class="product__card producrt__card--activ">
+                    <div class="product__info">
+                        <span class="product__price"></span>
+                        <h4 class="product__title"></h4>
+                        <div class="product__shape"></div>
+                        <p class="product__text"></p>
+                    </div>
+                    <div class="product_img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="product__card producrt__card--activ">
                     <div class="product__info">
                         <span class="product__price"></span>
                         <h4 class="product__title"></h4>
@@ -159,6 +181,28 @@
                     </div>
                 </div>
                 <div class="product__card">
+                    <div class="product__info">
+                        <span class="product__price"></span>
+                        <h4 class="product__title"></h4>
+                        <div class="product__shape"></div>
+                        <p class="product__text"></p>
+                    </div>
+                    <div class="product_img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="product__card producrt__card--activ">
+                    <div class="product__info">
+                        <span class="product__price"></span>
+                        <h4 class="product__title"></h4>
+                        <div class="product__shape"></div>
+                        <p class="product__text"></p>
+                    </div>
+                    <div class="product_img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="product__card producrt__card--activ">
                     <div class="product__info">
                         <span class="product__price"></span>
                         <h4 class="product__title"></h4>
