--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                         <li class="content__list-item">
                             <a href="lesson58/index.html">Урок 58</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="lesson69-73_(NEW_86-90)/index.html">Урок 90</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="content__block hidden" id="diplomBlock">
