--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                             <a href="lesson58/index.html">Урок 58</a>
                         </li>
                         <li class="content__list-item">
+                            <a href="lesson104/index.html">Урок 104</a>
+                        </li>
+                        <li class="content__list-item">
                             <a href="lesson69-73_(NEW_86-90)/index.html">Урок 90</a>
                         </li>
                     </ul>
@@ -154,3 +157,4 @@
 </body>
 
 </html>
+
