--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                         <li class="content__list-item">
                             <a href="lesson104/index.html">Урок 104</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="lesson114/index.html">Урок 114</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="content__block hidden" id="diplomBlock">
@@ -157,5 +160,6 @@
 </body>
 
 </html>
+
 
 
